Allow cgitrc variables to be set in Git config
Although repo-specific variables can already be set in the Git
configuration file, global CGit variables cannot.  Give a way to
specify variables for git-instacgit's cgitrc to be specified in the Git
configuration file by prefixing them with "instacgit.config.".

Signed-off-by: John Keeping <john@keeping.me.uk>

--- a/README
+++ b/README
@@ -32,3 +32,16 @@ Running
 =======
 
 Type "git instacgit" inside a Git repository.
+
+
+Configuration
+=============
+
+"git instacgit" is configured through "git config".  In addition to the
+"instacgit.script" and "instacgit.datadir" described above, keys of the form
+"instacgit.config.*" are also recognized.  These are used to configure CGit in
+addition to the default configuration.
+
+For example, if you want to turn off the commit graph:
+
+    git config instacgit.config.enable-commit-graph 0
